# simple-game-engine

./: .gitignore  bezier_to_matplotlib.py  main_window.py  mayavi_qwidget.py  requirements.txt  universe.yaml
doc/: ht5mjlatex.cfg  optmization.tex  universe.tex
engine/: __init__.py  agent.py  alpha_composite.py  atom.py  atoms_quantities_to_image.py  bitmap_force.py  bitmap_force_preparation_actor.py  expression_based_force.py  force.py  interpolate.py  main.py  matter.py  natural_law.py  parallelization_decorator.py  proof_of_the_concept.py  radial_force.py  settings.py  symbolic_universe.py  sympy_over_theano.py  universe.py  vector_field_rendering_actor.py  vector_field_to_image.py
engine/template/: CMakeLists.txt  core_engine.cu  core_engine.h  generated_constants.h  generated_core_engine.cuh  main.cpp  particle_system.cpp  particle_system.h
engine_configurator/: __init__.py  agent_item.py  agent_toolbox_item.py  atom_item.py  atom_properties_widget.py  atom_toolbox_item.py  bitmap_force_item.py  bitmap_force_properties_widget.py  bitmap_force_toolbox_item.py  clickable_graphics_widget.py  engine_configurator.qrc  expression_based_force_item.py  expression_based_force_properties_widget.py  expression_based_force_toolbox_item.py  force_item.py  game_scene_widget.py  graphics_path_item_with_arrow_heads.py  icon_graphics_widget.py  matter_item.py  matter_properties_widget.py  matter_toolbox_item.py  natural_law_item.py  natural_law_properties_widget.py  natural_law_toolbox_item.py  properties_widget.py  radial_force_item.py  radial_force_properties_widget.py  (+6 more)
(+37 files in other folders)
